fix overflow bug

--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,10 @@ body {
     text-align: center;
 }
 
+*, *:before, *:after {
+    box-sizing: border-box;
+  }
+
 img {
     border-radius: 50%;
     width: 150px;
@@ -40,7 +44,7 @@ p {
 footer {
     max-width: 800px;
     width: 100%;
-    margin: auto;
+    margin: 0px auto;
     /* background-color: #fff; */
     padding: 10px;
     /* border-radius: 8px; */
